--- a/wordcount/templates/home.html
+++ b/wordcount/templates/home.html
@@ -1,4 +1,29 @@
-<h1> 안녕하세요, 여기서 글자를 세세요 </h1>
+<!DOCTYPE html>
+<html lang="kr"> 
+    <head> 
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>HOME</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% load static %}
+        <link rel="stylesheet" type="text/css" media="screen" href="{% static 'wordcount/hello.css' %}">
+        <script src="main.js"></script>
+    </head>
+
+    <body>
+        <div class="jumbotron">
+            <h1> 안녕하세요, 여기서 글자를 세세요 </h1>
+            <br>
+           <a href = "{%url 'about'%}">ABOUT</a>
+           
+           <form action="{%url 'result'%}">
+            <textarea cols="40" rows="10" name="fulltext"></textarea>
+            <br>
+            <input type="submit" value="Count!">
+            </form>
+        </div>
+    </body>
+</html>
 
 
 <!-- home의 3가지 기능
@@ -6,10 +31,3 @@
 - about 링크랑 연결
 - 제출 버튼 있어야 함 -->
 
-<a href = "{%url 'about'%}">ABOUT</a>
-
-<form action="{%url 'result'%}">
-    <textarea cols="40" rows="10" name="fulltext"></textarea>
-    <br>
-    <input type="submit" value="Count!">
-</form>
